post filters added, react part fully completed
